Added app icon, changed colors, changed name. Fixed annoying bug which caused crash on loading app.

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,5 +3,10 @@
     <style name="Base.Theme.Tkey" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorButtonNormal">#5f88ff</item>
+        <item name="colorPrimary">#5f88ff</item>
+        <item name="colorAccent">#0000FF</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundColor">@color/black</item>
     </style>
 </resources>
