--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,11 @@
     <style name="Base.Theme.Tkey" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorButtonNormal">#5f88ff</item>
+        <item name="colorPrimary">#5f88ff</item>
+        <item name="colorAccent">#0000FF</item>
+        <item name="backgroundColor">#edede5</item>
+
     </style>
 
     <style name="Theme.Tkey" parent="Base.Theme.Tkey" />
