Split program into fragments, implemented more of signing functionality. Generally big refractor.

--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -5,5 +5,9 @@
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundColor">@color/egg</item>
+        <item name="android:scrollbarStyle">@color/white</item>
+
     </style>
 </resources>
