--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,5 +8,6 @@
         <item name="colorAccent">#0000FF</item>
         <item name="android:textColor">@color/white</item>
         <item name="backgroundColor">@color/black</item>
+        <item name="android:scrollViewStyle">@color/white</item>
     </style>
 </resources>
