--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#0343ff</color>
+    <color name="transparent">#00000000</color>
+    <color name="gray">#3c3f41</color>
+    <color name="egg">#eeede4</color>
+
 </resources>
