Added license information, renamed package, removed un-used imports, fixed getUDI print return.

--- a/app/src/main/res/drawable/scrollbar.xml
+++ b/app/src/main/res/drawable/scrollbar.xml
@@ -1,3 +1,8 @@
+<!--
+ * Copyright (C) 2022, 2023 - Tillitis AB
+ * SPDX-License-Identifier: GPL-2.0-only
+-->
+
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <size android:width="4dp" />
     <solid android:color="@color/white" />
