--- a/app/src/main/res/drawable/nav_indicator.xml
+++ b/app/src/main/res/drawable/nav_indicator.xml
@@ -1,3 +1,8 @@
+<!--
+ * Copyright (C) 2022, 2023 - Tillitis AB
+ * SPDX-License-Identifier: GPL-2.0-only
+-->
+
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true" android:drawable="@android:color/transparent" />
     <item android:drawable="@android:color/transparent" />
