--- a/app/src/main/res/layout/fragment_tkey_signer.xml
+++ b/app/src/main/res/layout/fragment_tkey_signer.xml
@@ -42,4 +42,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/getName"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="180dp"
+        android:text="Get Name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.78"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
